--- a/.config/termite/config
+++ b/.config/termite/config
@@ -4,7 +4,7 @@ audible_bell = false
 #bold_is_bright = true
 #clickable_url = true
 #dynamic_title = true
-font = Hack Regular 13
+font = Hack Nerd Font 13
 #fullscreen = true
 #icon_name = termite
 #mouse_autohide = false
